infrastructure/controllers/harbor/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: http

  hostnames:
    - "hub.xzr.es"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: harbor
          port: 80
